--- a/sparrow.yaml
+++ b/sparrow.yaml
@@ -25,4 +25,10 @@ tasks:
         name: install-python
   -
     name: install-python
-    plugin: sparkyci-package-python
+    language: Bash
+    code: |
+      if test $os = "alpine"; then
+        sudo apk add py3-pip
+      elif test $os = "debian"; then
+        sudo apt-get install -y python3-pip
+      fi
